--- a/WebApplication1/bin/WebApplication1.dll.config
+++ b/WebApplication1/bin/WebApplication1.dll.config
@@ -20,6 +20,7 @@
     <add name="BD_CADROConnectionString" connectionString="Data Source=CHRISTIAN-PC;Initial Catalog=BD_CADRO;Integrated Security=True" /> -->
     <!-- <add name="BD_CADROConnectionString" connectionString="Data Source=172.17.75.9;Initial Catalog=BD_CADRO;Persist Security Info=True;User ID=sa;Password=(qpwoeiruty12345*)" providerName="System.Data.SqlClient" /> -->
     <add name="BD_CADROConnectionString" connectionString="Data Source=172.17.75.116;Initial Catalog=BD_CADRO;Persist Security Info=True;User ID=sa;Password=(qpwoeiruty12345*)" providerName="System.Data.SqlClient"/>
+    <add name="BD_InfraConnectionString" connectionString="Data Source=172.17.75.116;Initial Catalog=BD_InfraestructuraHistorico;Persist Security Info=True;User ID=sa;Password=(qpwoeiruty12345*)" providerName="System.Data.SqlClient"/>
     <!-- -->
   </connectionStrings>
   <!--
@@ -33,6 +34,7 @@
   <system.web>
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="" uiCulture=""/>
     <authentication mode="None"/>
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="DevExpress.Web.v16.1, Version=16.1.12.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
@@ -106,7 +108,7 @@
         <add assembly="DevExpress.RichEdit.v16.1.Core, Version=16.1.12.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5" maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="409600" requestValidationMode="4.0" executionTimeout="110"/>
     <pages validateRequest="true" clientIDMode="Predictable">
       <namespaces>
         <add namespace="System.Web.Optimization"/>
