--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -34,6 +34,7 @@
   <system.web>
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" culture="" uiCulture=""/>
     <authentication mode="None"/>
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="DevExpress.Web.v16.1, Version=16.1.12.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A"/>
